CMS-2140: Fix spacing

--- a/Bundles/FileManagerWidget/src/SprykerShop/Yves/FileManagerWidget/Theme/default/components/molecules/file-download-link/file-download-link.scss
+++ b/Bundles/FileManagerWidget/src/SprykerShop/Yves/FileManagerWidget/Theme/default/components/molecules/file-download-link/file-download-link.scss
@@ -25,6 +25,10 @@
             text-align: center;
         }
 
+        &__name-wrapper {
+            display: flex;
+        }
+
         &__name {
             display: inline-block;
             vertical-align: middle;
